修复了材料lore判断错误的问题 2021.8.22 15点48分

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: EasyMake
 version: ${project.version}
 main: top.abmcar.easymake.EasyMake
 authors: [ abmcar ]
+softdepend: [ EasyVar ]
 description: 简单进行装备的打造
 commands:
   easymake:
