--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>top.abmcar</groupId>
     <artifactId>EasyMake</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>EasyMake</name>
@@ -71,5 +71,14 @@
             <version>1.12.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>top.abmcar</groupId>-->
+        <!--            <artifactId>EasyVar</artifactId>-->
+        <!--            <version>1.2.2-SNAPSHOT</version>-->
+        <!--            <scope>system</scope>-->
+        <!--            <systemPath>${project.basedir}/src/main/resources/lib/EasyVar-1.2.2-SNAPSHOT.jar</systemPath>-->
+        <!--&lt;!&ndash;            <scope>provided</scope>&ndash;&gt;-->
+        <!--        </dependency>-->
     </dependencies>
+
 </project>
