--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,6 +6,14 @@ MaxMakeLevel: 20
 Menu:
   #  菜单标题
   Title: "打造菜单"
+  #  菜单布局，*为玻璃，-为玻璃框，0为空栏，1为装备槽，2为强化按钮
+  Slots:
+    - "*********"
+    - "*0000000*"
+    - "*-------*"
+    - "*-1---2-*"
+    - "*-------*"
+    - "*********"
   #  边框名字
   GlassName: "边框"
   GlassPaneName: "玻璃框内放装备/图纸"
