--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,5 @@
 #默认打造配置文件名
 commonMakeDataName: "commonMakeData"
-#打造等级上限
-MaxMakeLevel: 20
 #菜单设置
 Menu:
   #  菜单标题
@@ -14,8 +12,9 @@ Menu:
     - '*-1---2-*'
     - '*-------*'
     - '*********'
-  #  边框名字
+  #  玻璃名字
   GlassName: "边框"
+  #  玻璃框名字
   GlassPaneName: "玻璃框内放装备/图纸"
   #  打造按钮名字
   MakeButtonName: "打造"
