[ADD]1.3.0 增加MakeData的NewMaterialName，NewDisplayName，NewLores选项 增加Config中菜单物品自定义材质 增加自定义音效 修复复数物品强化时数量问题 2021.9.12 17点41分

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>top.abmcar</groupId>
     <artifactId>EasyMake</artifactId>
-    <version>1.2.2-SNAPSHOT</version>
+    <version>1.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>EasyMake</name>
@@ -62,6 +62,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>placeholderapi</id>
+            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -71,12 +75,12 @@
             <version>1.12.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>me.clip</groupId>-->
-        <!--            <artifactId>placeholderapi</artifactId>-->
-        <!--            <version>2.9.2</version>-->
-        <!--            <scope>provided</scope>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.10.10</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>top.abmcar</groupId>
             <artifactId>EasyVar</artifactId>
